tests/macros/rawlist/mask.stderr
error: option `mask` does not exist for kind `rawlist`
 --> $DIR/mask.rs:2:47
  |
2 |     let q = inquisition::questions![rawlist { mask: todo!() }];
  |                                               ^^^^
