tests/macros/rawlist/mask.rs
fn main() {
    let q = inquisition::questions![rawlist { mask: todo!() }];
}
